Fixed work text spacing

--- a/css/grids.css
+++ b/css/grids.css
@@ -222,7 +222,7 @@
 
 }
 
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 70em) {
 
 .unit-xl-hidden {
   display: none;
