--- a/css/work.css
+++ b/css/work.css
@@ -11,7 +11,7 @@
 }
 
 .work-text {
-	max-width: 35rem;
+	max-width: 42rem;
 	margin: 5rem auto;
 }
 
